--- a/view/css/node/footer.css
+++ b/view/css/node/footer.css
@@ -11,7 +11,7 @@ div#footer div.block ul li a{font-size:12px;color:#a1a1a4}
 div#footer div.block.about{width:235px;padding:0 15px 0}
 div#footer div.block.about span.title{background: url("/view/css/header/goteo.png") no-repeat scroll left center transparent;	display: block;	height: 36px;	text-indent: 2000px;	width: 105px;	overflow:hidden;margin-bottom:5px}
 div#footer div.block.about span.title:hover{background:url("/view/css/header/goteo.png") no-repeat scroll center right transparent}
-div#footer div.block.about p a{color:#57c6c5}
+div#footer div.block.about p a, div#footer div.block.about p span {font-size:12px;color:#57c6c5;}
 
 div#footer div.block.help{width:165px}
 div#footer div.block.help span.title{color:#e85e5e;}
