--- a/nodesys/testnode/view/css/config.css
+++ b/nodesys/testnode/view/css/config.css
@@ -12,9 +12,10 @@ body.node.home > div.widget > div.title-line {
 }
 
 div#node-header div.logos div.node-home > a {
-    background: url('goteo-logo.png') no-repeat left top;
+    background: url('/nodesys/testnode/view/css/goteo-logo.png') no-repeat left top;
 }
 
 div#node-header div.logos div.node-home > a:hover {
-    background: url('goteo-logo.png') no-repeat right top;
+    background: url('/nodesys/testnode/view/css/goteo-logo.png') no-repeat right top;
 }
+
