--- a/nodesys/nodo/view/css/config.css
+++ b/nodesys/nodo/view/css/config.css
@@ -18,3 +18,38 @@ div#node-header div.logos div.node-home > a {
 div#node-header div.logos div.node-home > a:hover {
     background: url('goteo-logo.png') no-repeat right top;
 }
+
+body.project-show div.project-menu ul li.show a {
+    background-image: url('active_menu.png') !important;
+}
+
+body.project-show div.project-menu ul li a {
+  background-image: url('regular_menu.png') !important;
+}
+
+/*
+* beaks
+*/
+div.widget .title{
+	background-image: url('arrowH2-section.gif') !important;
+}
+#glossary-content h3.title {
+	background-image: url('arrowH2-section.gif') !important;
+}
+
+/* Esquinas del banderolo largo */
+div.widget.project-support div.tagmark.green {
+    background-image:url('project/long_tagmark_green.png') !important;
+}
+
+div.widget.project-support div.tagmark.red {
+    background-image:url('project/long_tagmark_red.png') !important;
+}
+
+div.widget.project-support div.tagmark.violet {
+    background-image:url('project/long_tagmark_violet.png') !important;
+}
+
+div.widget.project-support div.tagmark.grey {
+    background-image:url('project/long_tagmark_grey.png') !important;
+}
