Mejoras en el admin: * quitamos filtro en gestion de textos y traducciones * ancho fijo para normalform * filtro tipo en gestion de usuarios * bug en getion de aportes *  enlace entre gestion de proyectos y usuarios

--- a/view/css/admin/view.css
+++ b/view/css/admin/view.css
@@ -140,6 +140,7 @@ body.admin div#main > div.admin-center > div.widget.feed div.subitem > div.conte
 /* Capando el superform */
 body.admin div#main div.admin-center div.superform {
     float: left;
+    max-width: 750px;
 }
 
 body.admin div#main div.admin-center div.superform > div.elements {
