--- a/view/css/call.css
+++ b/view/css/call.css
@@ -174,6 +174,7 @@ div.call div.data li#numbers dl.long {
 	width: 160px;
 }
 
+div.call div.data li#numbers dl.last.applied,
 div.call div.data li#numbers dl.last.selected {
 	width: 90px;
 }
