Arreglos * El detalle de acciones sobre aporte antes de unset log * cron dopay para que aparezca nombre de proyecto * cron verify para que no elimine entradas de novedades de proyectos * modelo comentarios para obtener los ultimos comentarios en orden inverso * bugs visuales del termometro en dashboard, lateral y recompensas en widget (solo 5 iconos) * textos dinamicos en selector traducciones en dashboard * entradas blog en portada, enlace en el titulo

--- a/view/css/dashboard/projects/summary.css
+++ b/view/css/dashboard/projects/summary.css
@@ -271,6 +271,10 @@ body.dashboard div#meter-big dl dt.days {
     text-transform: uppercase;
 }
 
+body.dashboard div#meter-big dl dt.days.long {
+    left: 180px !important;
+}
+
 body.dashboard div#meter-big dl dd.days {
     left: 275px;
     font-size: 16px;
