--- a/view/css/node/common.css
+++ b/view/css/node/common.css
@@ -43,6 +43,6 @@ a.other{background-image:url('/view/css/icon/m/other.png')}
 div#node-main div#side span.euro{ text-indent:-9999px;overflow:hidden}
 
 div#side div.line{clear:both}
-div#side div.half{width:68px;margin-right:6px;float:left;padding:13px 10px;font-size:10px}
+div#side div.half{width:68px;margin-right:6px;float:left;padding:13px 10px;font-size:10px;overflow:hidden;}
 div#side div.half.last{margin-right:0}
 
