--- a/view/css/project/widget/summary.css
+++ b/view/css/project/widget/summary.css
@@ -110,6 +110,10 @@ div.widget.project-summary div#prjct-gallery  a.next:hover {
 	background: url('/view/css/small_arrowslider-sprt.png') scroll no-repeat 0 -48px;
 }
 
+div.widget.project-summary div.free-image {
+    margin-bottom: 10px !important;
+}
+
 /* Video motivacional */
 div.widget.project-summary div.project-motivation-video {
     margin-left: -20px;
