[Bugs visuales] en los campos de direccion de la pagina aportar y en el interlineado de los cuadraditos de paginación en perfil usuario (cofiannciador compulsivo)

--- a/view/css/discover.css
+++ b/view/css/discover.css
@@ -133,6 +133,7 @@ div.navi-bar ul.navi li {
     height: 1em;
     overflow: hidden;
     margin-right: .5em;
+    margin-bottom: .5em;
 }
 
 div.navi-bar ul.navi li > * {
